src/CleanArchitecture/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cleanarchitecture-api
  namespace: default
  labels:
    app: cleanarchitecture-api
    tier: backend
    architecture: clean
spec:
  type: ClusterIP
  selector:
    app: cleanarchitecture-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  sessionAffinity: None
